@@ -10,6 +10,8 @@ python-apt (0.9.0) UNRELEASED; urgency=low
   * Completely remove all old-API support code
   * aptsources/sourceslist.py
     - Document correct use of uniq and hide it using __all__ (Closes: #723815)
+  * python/apt_pkgmodule.cc:
+    - Fix documentation of version_compare (Closes: #680891)
 
   [ Jeremy Bicha ]
   * data/templates/Ubuntu.info.in: add 'devel' series (Closes: #722961)
